<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="kr.hs.dgsw.avocatalk.viewmodel.activity.LoginViewModel" />


        <variable
            name="globalValue"
            type="kr.hs.dgsw.avocatalk.data.widget.GlobalValue" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundColor"
        tools:context=".view.activity.LoginActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/input_layout"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_join" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:fontFamily="@font/default_font_light"
                android:text="@string/title_login"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_sets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                app:suffixText="@string/text_school_email_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                    android:inputType="text"
                    android:padding="15dp"
                    android:privateImeOptions="nm"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pw"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:privateImeOptions="nm"
                    android:text="@={viewModel.pw}"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <FrameLayout
            android:id="@+id/button_sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/register_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/default_font_bold"
                android:onClick="@{()->viewModel.onClickLoginBtn()}"
                android:text="@string/btn_login"
                android:textColor="@color/btnTextColor"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:visibility="@{globalValue.isLoading ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="117dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/ask_have_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/default_font_light"
                android:text="@string/login_ask_dont_have_id"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/go_signup_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/default_font_light"
                android:onClick="@{()->viewModel.onClickRegisterBtn()}"
                android:text="@string/move_to_register"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
